--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:ui": "rm -rf build && cd fullstackopen-exercises/part2/notes/ && npm run build && cp -r build ../../../notes-backend/",
+    "build:ui": "rm -rf build && cd ../fullstackopen-exercises/part2/notes/ && npm run build && cp -r build ../../../notes-backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail",
