--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0"
   },
